Align with Jakarta EE Branch (aka master)