@@ -227,10 +227,22 @@ class JavaTestCommand
                 def containerJavaVersion = get('container.java.version')
                 if (containerJavaVersion != null) {
                     log.info("Using java version (container) ${containerJavaVersion}")
-                    jvmarg(value: "-Dcontainer.java.version=${containerJavaVersion}")
                 }
 
-                def containerJavaOpts = get('container.java.opts')
+                def containerJavaOpts = get('container.java.opts', "")
+                if (options.contains('security')) {
+                    log.info("Enabling server security manager")
+
+                    // -Djava.security.properties=conf/security.properties
+                    containerJavaOpts += "-Djava.security.manager -Djava.security.policy==${project.basedir}/${openejbHome}/conf/catalina.policy"
+                }
+                if (options.contains('websocket')) {
+                    log.info("Enabling Tomcat WebSockets configuration")
+                    containerJavaOpts += "-Dorg.apache.tomcat.websocket.DISABLE_BUILTIN_EXTENSIONS=true " +
+                            "-Dorg.apache.tomcat.websocket.ALLOW_UNSUPPORTED_EXTENSIONS=true " +
+                            "-Dorg.apache.tomcat.websocket.STRICT_SPEC_COMPLIANCE=true " +
+                            "-Dorg.apache.tomcat.websocket.DEFAULT_PROCESS_PERIOD=0"
+                }
                 if (containerJavaOpts != null) {
                     log.info("Using java opts (container) ${containerJavaOpts}")
                     jvmarg(value: "-Dcontainer.java.opts=${containerJavaOpts}")
